corrected footer completely
Done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-535-softy-pinko
      <link rel="stylesheet" href="assets/css/aos.css">
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="assets/css/templatemo-digital-trend.css">
-
+     <link rel="stylesheet" href="assets/css/main.css">
 
     </head>
     
@@ -648,20 +648,13 @@ https://templatemo.com/tm-535-softy-pinko
             </p>
             </div>
   
-            <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" style="padding-top: 72px;" data-aos="fade-up" data-aos-delay="400">
-              <a  href="https://robosocnith.com/"><img src="assets/images/robosoc.png" style="padding-left:10px;"></a> 
+            <div class="col-lg-4 mx-lg-auto  col-md-6 col-12" style="padding-top: 72px;" data-aos="fade-up" data-aos-delay="400">
+             <img src="assets/images/robosoc.png" >
             </div>
   
-            <div class="col-lg-4 mx-lg-auto col-md-6 col-12"  data-aos="fade-up" data-aos-delay="500">
-                <!---->
-                <p class="copyright-text">Copyright &copy; 
-                    <br>
-                    <a  href="https://robosocnith.com/">Robotics NIT-H</a></p>
-            </div>
-  
-            <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600" >
-              <ul class="social-icon">
-                <li><a href="https://www.instagram.com/robosocnith/s" class="fa fa-instagram"></a></li>
+            <div class="col-lg-6 mx-lg-auto col-md-6 col-12 rat" data-aos="fade-up" data-aos-delay="600"  >
+              <ul class="social-icon ">
+                <li><a href="https://www.instagram.com/robosocnith/s" class="fa fa-instagram "></a></li>
                 <li><a href="https://www.linkedin.com/school/robotics-society-national-institute-of-technology-hamipur/about/" class="fa fa-linkedin"></a></li>
                 <li><a href="https://www.youtube.com/channel/UCcNk3wOBYsFvdoYoHiyhtng" class="fa fa-youtube"></a></li>
                 <li><a href="https://github.com/robonith" class="fa fa-github"></a></li>
