Extra files removed footer done completely
Footer Done as Well as tested

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Softy Pinko - Bootstrap 4.0 Theme</title>
+    <title>Robo Week NIT-H</title>
 <!--
 SOFTY PINKO
 https://templatemo.com/tm-535-softy-pinko
@@ -675,10 +675,7 @@ https://templatemo.com/tm-535-softy-pinko
   
        <!-- SCRIPTS -->
        <script src="assets/new/js/jquery.min.js"></script>
-       <script src="assets/new/js/bootstrap.min.js"></script>
        <script src="assets/new/js/aos.js"></script>
-       <script src="assets/new/js/owl.carousel.min.js"></script>
-       <script src="assets/new/js/smoothscroll.js"></script>
        <script src="assets/new/js/custom.js"></script>
     
     <!-- jQuery -->
