--- a/index.html
+++ b/index.html
@@ -610,7 +610,75 @@ https://templatemo.com/tm-535-softy-pinko
         </div>
     </section>
     <!-- ***** Contact Us End ***** -->
-    
+    <!--Time Line Section Start Here-->
+    <div class="container" style="padding-top: 25px; padding-bottom: 50px;">
+        <div class="row">
+            <div class="col d-flex justify-content-center"><h1 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; padding-bottom: 10px; padding-top: 5px;">Timeline</h1></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="main-timeline">
+                    <!-- copy this again-->
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <div class="timeline-num">1</div>
+                            <h3 class="title">Web Designing</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                            <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                        </a>
+                    </div>
+                    <!--end of copying-->
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <div class="timeline-num">2</div>
+
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                            <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <div class="timeline-num">2</div>
+
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                            <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <div class="timeline-num">2</div>
+
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                            <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                        </a>
+                    </div>
+                    <div class="timeline">
+                        <a href="#" class="timeline-content">
+                            <div class="timeline-num">2</div>
+
+                            <h3 class="title">Web Development</h3>
+                            <p class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada tellus lorem, et condimentum neque commodo Integer males uada tellus lorem, et condimentum neque commodo
+                            </p>
+                            <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Footer Section Start Here-->
     <footer class="site-footer">
         <div class="container">
           <div class="row">
